--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </nav>
 
   <section class="hero">
-    <h1>Welcome to Arcxrona</h1>
-    <p>Website pertama lu udah jadi, sekarang makin ganteng 😎🔥</p>
+    <h1>Selamat Datang Di web Archeron 🥰</h1>
+    <p>Ngapain bre. gaada apa apa disini 😂🖕</p>
     <a class="btn-primary" href="#">Explore</a>
   </section>
 
